--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.pio/
+.vscode/
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
 
