--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ framework = arduino
 
 board_build.flash_mode  = qio
 board_upload.flash_size  = 8MB
+upload_speed = 921600
 
 extra_scripts = 
     pre:version.py
@@ -33,7 +34,9 @@ upload_port = /dev/ttyUSB0
 
 [env:debug]
 build_type = debug
-build_flags = '-D DEBUG'
+build_flags =
+    '-D DEBUG'
+    -DCORE_DEBUG_LEVEL=4
 
 lib_deps = ${env.lib_deps}
 ; upload_port = COM22
