--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,11 @@ framework = arduino
 
 board_build.flash_mode  = qio
 board_upload.flash_size  = 8MB
+monitor_speed = 115200
 upload_speed = 921600
+
+; upload_port = COM22
+upload_port = /dev/ttyUSB0
 
 extra_scripts = 
     pre:version.py
@@ -28,9 +32,7 @@ lib_deps =
 
 [env:release]
 lib_deps = ${env.lib_deps}
-; upload_port = COM22
-monitor_speed = 115200
-upload_port = /dev/ttyUSB0
+build_flags = -DCORE_DEBUG_LEVEL=3
 
 [env:debug]
 build_type = debug
@@ -39,6 +41,3 @@ build_flags =
     -DCORE_DEBUG_LEVEL=4
 
 lib_deps = ${env.lib_deps}
-; upload_port = COM22
-upload_port = /dev/ttyUSB0
-monitor_speed = 115200
