--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 default_envs = release
 
 [env]
-platform = espressif32
+platform = espressif32@6.0.1
 board = esp32-s3-devkitc-1
 framework = arduino
 ; upload_protocol = esp-builtin # Native USB
@@ -25,18 +25,25 @@ upload_speed = 921600
 ; upload_port = COM22
 upload_port = /dev/ttyUSB0
 
+build_flags =
+    '-DHOSTNAME="ReflowPlate"'
+    -I include
+
 extra_scripts = 
     pre:version.py
 
-lib_deps =
+lib_deps = https://github.com/me-no-dev/ESPAsyncWebServer#f71e3d4
 
 [env:release]
 lib_deps = ${env.lib_deps}
-build_flags = -DCORE_DEBUG_LEVEL=3
+build_flags = 
+    ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=3
 
 [env:debug]
 build_type = debug
 build_flags =
+    ${env.build_flags}
     '-D DEBUG'
     -DCORE_DEBUG_LEVEL=4
 
