--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ framework = arduino
 board_build.flash_mode  = qio
 board_upload.flash_size  = 8MB
 monitor_speed = 115200
-upload_speed = 921600
+; upload_speed = 921600
 
 ; upload_port = COM22
 upload_port = /dev/ttyUSB0
