--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ monitor_speed = 115200
 ; upload_speed = 921600
 
 ; upload_port = COM22
-upload_port = /dev/ttyUSB0
+upload_port = /dev/ttyACM0
 
 build_flags =
     '-DHOSTNAME="ReflowPlate"'
